<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heroYellow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/maths_intro_screen_title"
            android:textColor="@color/white"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/results_screen_subtitle"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/results_screen_message"
            android:textColor="@color/white"
            android:textSize="36sp" />


        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/kirang"
            android:text="@string/results_screen_button1"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_red"
            android:fontFamily="@font/kirang"
            android:text="@string/results_screen_button2"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>