<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heroYellow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/treasure_chest_screen_title"
            android:textColor="@color/white"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/treasure_chest_screen_message"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/icon_treasure" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/kirang"
            android:onClick="showVideo"
            android:text="@string/treasure_chest_screen_button"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>