<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heroYellow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/name_screen_title"
            android:textColor="@color/white"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/name_screen_subtitle"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="Add your name!"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/kirang"
            android:onClick="sendMessage"
            android:text="@string/name_screen_button"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>