<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heroYellow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="84dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/icon_chest" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/greetings_screen_title"
            android:textColor="@color/white"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/kirang"
            android:gravity="center"
            android:text="@string/greetings_screen_message"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/kirang"
            android:onClick="nextScreen"
            android:text="@string/greetings_screen_button"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>